attempt to get background to stop shifting

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,11 @@
  *= require 05retire
  */
 
-html {}
-body {}
+
+html {
+  background: url(texture.png), url(blood-splatter.png) right bottom no-repeat fixed, #ffffff;
+}
+
 main {}
 
 #root {
